# haskoin

./: .gitignore  Dockerfile  README.md  cabal.project  config.example.toml  docker-compose.yml  haskoin.cabal
.github/workflows/: ci.yml  ci.yml.disabled  release.yml
CORE-PARITY-AUDIT/: w142-segwit-witness-validation.md  w143-block-validation.md  w144-script-verify-flags.md  w145-subsidy-fees-maxmoney.md  w146-block-storage.md  w147-utxo-database-chainstate.md  w148-headers-first-sync-reorg.md  w149-pruning-assumevalid-minimumchainwork.md  w150-atmp-prechecks-policychecks.md  w151-package-relay-rbf.md  w152-tx-relay-inv-orphan.md  w153-mempool-eviction-minrelay.md  w154-createnewblock-blockassembler.md  w155-getblocktemplate-submitblock-bip22.md  w156-bip152-cmpctblock-blocktxn.md  w157-signet-bip94-miner-constants.md  w158-bip322-message-signing.md  w159-libsecp256k1-ffi-batch-verify.md  w160-ecdsa-schnorr-rfc6979-sighash.md  w161-bip32-bip39-bip43-bip44-hd-derivation.md
app/: Bip341Shim.hs  Main.hs  TxoSpenderProof.hs  VerifyScriptShim.hs
audit/: w122_bip158_codec_stress.md  w123_mining_gbt.md  w124_operator_experience.md  w125_rpc_error_parity.md  w126_bip152_compact_blocks.md  w127_taproot.md  w128_addrman.md  w129_coin_selection.md  w130_bip125_feebumper_rule3.md  w131_descriptors_miniscript.md  w132_nsequence_csv_mtp.md  w133_index_databases.md  w134_bip37_bloom_filter.md  w135_standardness_rules.md  w136_relay_flags.md  w137_psbt.md  w138_assumeutxo.md  w139_fee_estimation.md  w140_http_rpcauth.md  w141_zmq_rest_notify.md
bench/: Bench.hs
cbits/: format_double.c  hwdetect.c  secp256k1_compat.c  zmq_stubs.c
dist-newstyle2/cache/: config
dist-test/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
dist-test/packagedb/ghc-9.6.7/: haskoin-0.1.0.0-inplace.conf  package.cache
dist-testnet4/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-testnet4/packagedb/ghc-9.6.7/: haskoin-0.1.0.0-inplace.conf  package.cache
scripts/: build-rocksdb-compat.sh
src/Haskoin/: ASMap.hs  Bip21.hs  BlockTemplate.hs  Consensus.hs  Crypto.hs  Daemon.hs  FeeEstimator.hs  Index.hs  Mempool.hs  MuHash.hs  Network.hs  Payjoin.hs  Performance.hs  Rpc.hs  Script.hs  Storage.hs  Sync.hs  TaprootSighash.hs  TxOrphanage.hs  Types.hs  Wallet.hs
src/Haskoin/Mempool/: Persist.hs
src/Haskoin/Policy/: Standard.hs
src/Haskoin/Wallet/: Persist.hs
src/System/: ZMQ4.hs
test/: Bip21Spec.hs  ConvertJoinPsbtSpec.hs  Fix64TlsSpec.hs  Fix65PayjoinReceiverSpec.hs  Fix66PayjoinSenderSpec.hs  Fix67RpcAllowIpSpec.hs  ParseHashVSpec.hs  PrioritiseTransactionSpec.hs  ScriptVectors.hs  ServiceFlagsAdvertiseSpec.hs  ServiceFlagsMain.hs  SighashVectors.hs  Spec.hs  W100UTXOCacheSpec.hs  W101ActivateBestChainSpec.hs  W102AssumeUTXOSpec.hs  W103TxRelaySpec.hs  W104AddrManSpec.hs  W105CheckQueueSpec.hs  W106MempoolSpec.hs  W107CompactSizeSpec.hs  W108GbtSpec.hs  W109BlockIndexSpec.hs  W110BloomFilterSpec.hs  W111WalletSpec.hs  W112CompactBlockSpec.hs  W113CoinSelectionSpec.hs  W114FeeEstimationSpec.hs  W115ASMapSpec.hs  W116PackageRelaySpec.hs  W117BIP155NetworksSpec.hs  W118WalletSpec.hs  W119PayjoinSpec.hs  W120MempoolRbfSpec.hs  W121CompactFiltersSpec.hs  W123MiningGBTSpec.hs  W124OperatorSpec.hs  W125RPCErrorParitySpec.hs  W126BIP152CompactBlocksSpec.hs  W127TaprootSpec.hs  (+39 more)
