cabal-version: 3.0
name:          haskoin
version:       0.1.0.0
synopsis:      Bitcoin full node in Haskell
build-type:    Simple

library
  exposed-modules: Haskoin.Types
                 , Haskoin.Crypto
                 , Haskoin.Script
                 , Haskoin.Consensus
                 , Haskoin.Storage
                 , Haskoin.Network
                 , Haskoin.Sync
                 , Haskoin.Mempool
                 , Haskoin.FeeEstimator
                 , Haskoin.BlockTemplate
                 , Haskoin.Rpc
                 , Haskoin.Wallet
                 , Haskoin.Performance
                 , Haskoin.Index
  other-modules:   System.ZMQ4
  hs-source-dirs:  src
  build-depends:   base >= 4.14 && < 5
                 , bytestring
                 , cereal
                 , hashable
                 , deepseq
                 , cryptonite
                 , memory
                 , text
                 , transformers
                 , rocksdb-haskell
                 , network
                 , stm
                 , time
                 , random
                 , containers
                 , resourcet
                 , aeson
                 , warp
                 , wai
                 , http-types
                 , base16-bytestring
                 , base64-bytestring
                 , vector
                 , parallel
                 , async
                 , secp256k1-haskell
                 , mmap
                 , directory
                 , filepath
  c-sources:       cbits/hwdetect.c
  cc-options:       -O2
  extra-lib-dirs:  /home/max/.local/lib64
  include-dirs:    /home/max/.local/include
  extra-libraries: minisketch stdc++ rocksdb_compat
  default-language: Haskell2010
  ghc-options:     -Wall -O2 -funbox-strict-fields

executable haskoin
  main-is:       Main.hs
  hs-source-dirs: app
  build-depends: base >= 4.14 && < 5
               , haskoin
               , optparse-applicative
               , text
               , bytestring
               , stm
               , containers
               , directory
               , filepath
               , base16-bytestring
               , cereal
               , network
  default-language: Haskell2010
  ghc-options:     -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite haskoin-test
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , hspec
               , bytestring
               , cereal
               , QuickCheck
               , base16-bytestring
               , text
               , containers
               , stm
               , temporary
               , filepath
               , vector
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite sighash-vectors
  type:          exitcode-stdio-1.0
  main-is:       SighashVectors.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , bytestring
               , cereal
               , aeson
               , base16-bytestring
               , text
               , vector
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite script-vectors
  type:          exitcode-stdio-1.0
  main-is:       ScriptVectors.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , bytestring
               , aeson
               , base16-bytestring
               , text
               , vector
               , containers
  default-language: Haskell2010
  ghc-options:     -Wall -O2

benchmark haskoin-bench
  type:          exitcode-stdio-1.0
  main-is:       Bench.hs
  hs-source-dirs: bench
  build-depends: base >= 4.14 && < 5
               , haskoin
               , criterion
               , bytestring
               , deepseq
               , containers
               , async
  default-language: Haskell2010
  ghc-options:     -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
