cabal-version: 3.0
name:          haskoin
version:       0.1.0.0
synopsis:      Bitcoin full node in Haskell
build-type:    Simple

library
  exposed-modules: Haskoin.Types
                 , Haskoin.Crypto
                 , Haskoin.Script
                 , Haskoin.Consensus
                 , Haskoin.Storage
                 , Haskoin.Network
                 , Haskoin.Sync
                 , Haskoin.Mempool
                 , Haskoin.FeeEstimator
                 , Haskoin.BlockTemplate
                 , Haskoin.Rpc
                 , Haskoin.Wallet
                 , Haskoin.Performance
                 , Haskoin.Index
  other-modules:   System.ZMQ4
  hs-source-dirs:  src
  build-depends:   base >= 4.14 && < 5
                 , bytestring
                 , cereal
                 , hashable
                 , deepseq
                 , cryptonite
                 , memory
                 , text
                 , transformers
                 , rocksdb-haskell
                 , network
                 , stm
                 , time
                 , random
                 , containers
                 , resourcet
                 , aeson
                 , warp
                 , wai
                 , http-types
                 , base16-bytestring
                 , base64-bytestring
                 , vector
                 , parallel
                 , async
                 , secp256k1-haskell
                 , mmap
                 , directory
                 , filepath
                 , unix
  c-sources:       cbits/hwdetect.c
                 , cbits/secp256k1_compat.c
  cc-options:       -O2
  -- System dependencies: sudo apt install -y librocksdb-dev libsecp256k1-dev
  -- Also requires libminisketch (build from https://github.com/sipa/minisketch)
  -- RocksDB 9.x removed rocksdb_filterpolicy_create; rocksdb_compat is a shim
  -- that provides it. Build the shim with: scripts/build-rocksdb-compat.sh
  -- and install to /usr/local/lib or set extra-lib-dirs below.
  extra-libraries: minisketch stdc++ rocksdb_compat rocksdb secp256k1
  default-language: Haskell2010
  ghc-options:     -Wall -O2 -funbox-strict-fields

executable haskoin
  main-is:       Main.hs
  hs-source-dirs: app
  build-depends: base >= 4.14 && < 5
               , haskoin
               , optparse-applicative
               , text
               , bytestring
               , stm
               , containers
               , directory
               , filepath
               , base16-bytestring
               , cereal
               , network
  default-language: Haskell2010
  ghc-options:     -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite haskoin-test
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , hspec
               , bytestring
               , cereal
               , QuickCheck
               , base16-bytestring
               , text
               , containers
               , stm
               , temporary
               , filepath
               , vector
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite sighash-vectors
  type:          exitcode-stdio-1.0
  main-is:       SighashVectors.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , bytestring
               , cereal
               , aeson
               , base16-bytestring
               , text
               , vector
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite script-vectors
  type:          exitcode-stdio-1.0
  main-is:       ScriptVectors.hs
  hs-source-dirs: test
  build-depends: base >= 4.14 && < 5
               , haskoin
               , bytestring
               , aeson
               , base16-bytestring
               , text
               , vector
               , containers
  default-language: Haskell2010
  ghc-options:     -Wall -O2 -optl-Wl,-rpath,/home/max/.local/lib64


benchmark haskoin-bench
  type:          exitcode-stdio-1.0
  main-is:       Bench.hs
  hs-source-dirs: bench
  build-depends: base >= 4.14 && < 5
               , haskoin
               , criterion
               , bytestring
               , deepseq
               , containers
               , async
  default-language: Haskell2010
  ghc-options:     -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
